--- a/JavaScript/day3/index.html
+++ b/JavaScript/day3/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>exercise4</title>
+    <title>Math object exercise</title>
 </head>
 <body>
- 
     <section>
-        <h1>Your number is <span id="numtitle">PLACEHOLDER</span></h1>
-        <div id="text">PLACEHOLDER</div>
+        <h1>O seu número é: <span id="title-number">...</span></h1>
+        <div id="text">Placeholder</div>
     </section>
-    <script src="day2/js/exercise4other.js"></script>
+
+
+    <script src="js/math_ex.js"></script>
 </body>
 </html>
